# wyred-bench

./: CLAUDE.md  README.md  pyproject.toml
docs/: card.md  compare.md  index.md  measurement-records.md  selftest.md  verdict-codes.md
src/wyred_bench/: __init__.py  __main__.py  card.py  compare.py  jsonio.py  model.py  selftest.py
tests/: run_tests.py
tests/fixtures/: watchy_v1_bench.benchcard.md  watchy_v1_bench.testplan.json
tests/fixtures/measurements/: allpass.measurements.json  boundary_high.measurements.json  boundary_low.measurements.json  check_unmeasured.measurements.json  current_exceeded.measurements.json  i2c_missing_addr.measurements.json  i2c_unexpected_addr.measurements.json  measurement_unknown_check.measurements.json  rail_out_of_range.measurements.json  signal_out_of_range.measurements.json  stale_stamp.measurements.json  state_mismatch.measurements.json  unit_mismatch.measurements.json
tests/fixtures/selftest/: watchy_v1_bench.selftest.NOT_IMPLEMENTED.json  watchy_v1_bench.selftest.c  watchy_v1_bench.selftest.py
tests/fixtures/synthetic/: synthetic_allpass.measurements.json  synthetic_duty_out_of_range.measurements.json  synthetic_partial_trio.measurements.json  synthetic_partial_trio.testplan.json  synthetic_signals.testplan.json
